<resources>
    <string name="app_name">SQLLITE DATABASE</string>
    <string name="title1">Fill the form to register</string>
    <string name="title2">List of present members</string>
    <string name="title">Edit correctly to eradicate errors</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_update">Update</string>
    <string name="register">Register</string>

    <!--      sign Up page-->
    <string name="sign_up">Create an account</string>
    <string name="sign">Create account</string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name </string>
    <string name="email_address">Email Address </string>
    <string name="create_password">Create Password </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="back_to_login">Already have an account?</string>
    <string name="login">login</string>

    <!--    Login page-->
    <string name="welcome">Welcome </string>
    <string name="password">Password </string>
    <string name="btn_login">Log In </string>
    <string name="textToSignUp">No account yet?</string>
    <string name="SignUp">Sign Up Here </string>
    <string name="errorMessage1">Invalid Email or password</string>

</resources>