<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingLeft="15dp"
android:paddingRight="15dp">

<TextView
    android:id="@+id/tv1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:color="@android:color/black"
    android:textSize="40sp"
    android:gravity="center_horizontal"
    android:layout_marginTop="100dp"/>


<EditText
    android:id="@+id/emailAddress"
    android:layout_below="@id/tv1"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="35dp"
    android:textSize="20sp"
    android:gravity="center"
    android:background="@drawable/rounded_edit_text"
    android:hint="@string/email_address"
    android:inputType="text" />

<EditText
    android:id="@+id/password"
    android:layout_below="@id/emailAddress"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="25dp"
    android:gravity="center"
    android:textSize="20sp"
    android:background="@drawable/rounded_edit_text"
    android:hint="@string/password"
    android:inputType="textPassword" />

<Button
    android:id="@+id/btn_login"
    android:layout_below="@id/password"
    android:layout_width="200dp"
    android:layout_height="60dp"
    android:layout_marginTop="35dp"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/button"
    android:text="@string/btn_login"
    android:textColor="@android:color/white"
    android:textSize="25sp" />


    <View
        android:layout_below="@id/btn_login"
        android:id="@+id/view2"
        android:layout_width="700dp"
        android:layout_height="3dp"
        android:layout_marginTop="150dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_below="@id/view2"
    android:layout_marginTop="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/textToSignUp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/signUpHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        android:layout_marginLeft="10dp"/>
</LinearLayout>

</RelativeLayout>
