<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:color="@android:color/black"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="50dp"/>

            <View
                android:layout_below="@id/tv1"
                android:id="@+id/view1"
                android:layout_width="40dp"
                android:layout_centerHorizontal="true"
                android:layout_height="6dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
               />

            <View
                android:layout_below="@id/view1"
                android:id="@+id/view2"
                android:layout_width="700dp"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                android:gravity="center_horizontal"/>



                <EditText
                    android:layout_below="@id/view2"
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    android:padding="15dp"
                    android:background="@drawable/edit_text"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/icon_person"
                    android:hint="@string/first_name"
                    android:inputType="text" />

    <EditText
        android:id="@+id/lastName"
        android:layout_below="@id/firstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/icon_person"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edit_text"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/create_emailAddress"
        android:layout_below="@id/lastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/email"
        android:paddingLeft="15dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email_address"
        android:inputType="text" />

    <EditText
        android:id="@+id/create_password"
        android:layout_below="@id/create_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="15dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/icon_password"
        android:background="@drawable/edit_text"
        android:hint="@string/create_password"
        android:inputType="text" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_below="@id/create_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="15dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/icon_password"
        android:background="@drawable/edit_text"
        android:hint="@string/confirm_password"
        android:inputType="text" />


    <Button
                    android:id="@+id/btn_signUp"
                    android:layout_below="@id/confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button"
                    android:text="@string/sign"
                    android:padding="9dp"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/btn_signUp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/back_to_login"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        android:layout_marginLeft="10dp"/>
    </LinearLayout>

</RelativeLayout>
